@@ -43,8 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="OpenGLMap.cs" />
-    <Compile Include="OpenGLMatrixHelper.cs" />
+    <Compile Include="OpenGlMapDrawer" />
+    <Compile Include="MatrixHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
