@@ -45,6 +45,7 @@
     <Compile Include="Rectangle.cs" />
     <Compile Include="ProjFourWrapper.cs" />
     <Compile Include="Layer.cs" />
+    <Compile Include="Drawing\IMapDrawer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
